exports[`<DeviceDetailTemplate /> render matches snapshot with and without purchasing info 1`] = `
<section
  className="device-detail">
  <div
    className="container detail-block">
    <div
      className="row">
      <div
        className="col-xs-10 col-xs-offset-1 text-center visible-xs-block">
        <h1 />
      </div>
    </div>
    <div
      className="row is-flex">
      <div
        className=" col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-lg-offset-1 col-lg-3">
        <img
          alt={undefined}
          className="img-responsive"
          src={undefined} />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-6 col-lg-offset-0 col-lg-7">
        <h1
          className="as-h2 hidden-xs">
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined
              }
            } />
        </h1>
        <div
          className="feature-list"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined
            }
          } />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-lg-offset-4 col-lg-7" />
    </div>
  </div>
</section>
`;

exports[`<DeviceDetailTemplate /> render matches snapshot with and without purchasing info 2`] = `
<section
  className="device-detail">
  <div
    className="container detail-block">
    <div
      className="row">
      <div
        className="col-xs-10 col-xs-offset-1 text-center visible-xs-block">
        <h1 />
      </div>
    </div>
    <div
      className="row is-flex">
      <div
        className=" col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-lg-offset-1 col-lg-3">
        <img
          alt={undefined}
          className="img-responsive"
          src={undefined} />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-6 col-lg-offset-0 col-lg-7">
        <h1
          className="as-h2 hidden-xs">
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined
              }
            } />
        </h1>
        <div
          className="feature-list"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined
            }
          } />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-lg-offset-4 col-lg-7" />
    </div>
  </div>
</section>
`;

exports[`<DeviceDetailTemplate /> render matches snapshot with and without terms 1`] = `
<section
  className="device-detail">
  <div
    className="container detail-block">
    <div
      className="row">
      <div
        className="col-xs-10 col-xs-offset-1 text-center visible-xs-block">
        <h1 />
      </div>
    </div>
    <div
      className="row is-flex">
      <div
        className=" col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-lg-offset-1 col-lg-3">
        <img
          alt={undefined}
          className="img-responsive"
          src={undefined} />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-6 col-lg-offset-0 col-lg-7">
        <h1
          className="as-h2 hidden-xs">
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined
              }
            } />
        </h1>
        <div
          className="feature-list"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined
            }
          } />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-lg-offset-4 col-lg-7" />
    </div>
  </div>
</section>
`;

exports[`<DeviceDetailTemplate /> render matches snapshot with and without terms 2`] = `
<section
  className="device-detail">
  <div
    className="container detail-block">
    <div
      className="row">
      <div
        className="col-xs-10 col-xs-offset-1 text-center visible-xs-block">
        <h1 />
      </div>
    </div>
    <div
      className="row is-flex">
      <div
        className=" col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-lg-offset-1 col-lg-3">
        <img
          alt={undefined}
          className="img-responsive"
          src={undefined} />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-6 col-lg-offset-0 col-lg-7">
        <h1
          className="as-h2 hidden-xs">
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined
              }
            } />
        </h1>
        <div
          className="feature-list"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined
            }
          } />
      </div>
      <div
        className=" col-xs-offset-1 col-xs-10 col-lg-offset-4 col-lg-7" />
    </div>
  </div>
  <div
    className="terms-block">
    <div
      className="container">
      <div
        className="row">
        <div
          className="col-xs-10 col-xs-offset-1 col-sm-offset-1 col-sm-10">
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "terms"
              }
            } />
        </div>
      </div>
    </div>
  </div>
</section>
`;
